--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="rodape">
         <div class="box2">
             <div class="contatinho">
-                <span>Entre e contato</span>
+                <span>Entre em contato</span>
                 <p>Entre em contato através do email</p>
                 <p>evertonfrankllintrc@gmail.com</p>
                 <p>ou pelo número +55 87 98139 0124</p>
